[gd_scene load_steps=3 format=3 uid="uid://crm7asbjemq3y"]

[ext_resource type="Script" path="res://src/ems/QuestTrackerUI.gd" id="1_dldru"]

[sub_resource type="LabelSettings" id="LabelSettings_drwf0"]
font_size = 30

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dldru")

[node name="QuestTracker" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 300.0
offset_bottom = 32.0

[node name="ColorRect" type="ColorRect" parent="QuestTracker"]
layout_mode = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 0.588235)

[node name="VBoxContainer" type="VBoxContainer" parent="QuestTracker"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="QuestIndicator" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "QUEST STARTED"
label_settings = SubResource("LabelSettings_drwf0")

[node name="QuestDescription" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
